<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glittery Wormhole</string>
    <string name="description">Fly through space like a glitter queen!</string>
    <string name="settings_title">Glitter Wormhole Settings</string>
    <string name="settings_summary">This is the configuration station</string>
    <string name="flight_speed_title">Flight Speed</string>
    <string name="flight_speed_summary">The speed of the wormhole</string>
    <string name="particle_speed_title">Particle Speed</string>
    <string name="particle_speed_summary">The speed of the particles</string>
    <string name="num_rings_title">Number of rings in the wormhole</string>
    <string name="num_rings_summary">Decrease the number of rings to improve performance</string>
    <string name="background_color_title">Background Color</string>
    <string name="colors_title">Particle Colors</string>
    <string name="colors_summary">Choose the particles\' colors</string>
    <string name="colors_confirm">Set Color</string>
    <string name="color_one">Color One</string>
    <string name="color_two">Color Two</string>
    <string name="color_three">Color Three</string>
    <string name="single_space"> </string>

</resources>