<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com"
    android:key="disco_wormhole_settings" >

    <com.adamantine.discowormhole.and.AdPreference
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:key="ad" />

    <Preference
        android:key="title"
        android:summary="@string/settings_summary"
        android:title="@string/settings_title" />

    <com.adamantine.discowormhole.and.SeekBarPreference
        android:defaultValue="50"
        android:key="flight_speed"
        android:max="100"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:summary="@string/flight_speed_summary"
        android:title="@string/flight_speed_title"
        robobunny:min="1"
        robobunny:unitsLeft=""
        robobunny:unitsRight="%" />
    <com.adamantine.discowormhole.and.SeekBarPreference
        android:defaultValue="30"
        android:key="num_rings"
        android:max="40"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:summary="@string/num_rings_summary"
        android:title="@string/num_rings_title"
        robobunny:min="1"
        robobunny:unitsLeft=""
        robobunny:unitsRight="" />
    <com.adamantine.discowormhole.and.SeekBarPreference
        android:defaultValue="50"
        android:key="particle_speed"
        android:max="100"
        android:progressDrawable="@drawable/seek_bar_progress"
        android:summary="@string/particle_speed_summary"
        android:title="@string/particle_speed_title"
        robobunny:min="1"
        robobunny:unitsLeft=""
        robobunny:unitsRight="%" />

    <Preference
        android:summary="@string/colors_summary"
        android:title="@string/colors_title" >
    </Preference>

    <com.adamantine.discowormhole.and.DegradedColorPreference
        android:defaultValue="0xff7d9fff"
        android:key="color_one"
        android:title="@string/color_one" />
    <com.adamantine.discowormhole.and.DegradedColorPreference
        android:defaultValue="0xffff4b31"
        android:key="color_two"
        android:title="@string/color_two" />
    <com.adamantine.discowormhole.and.DegradedColorPreference
        android:defaultValue="0xff64ff46"
        android:key="color_three"
        android:title="@string/color_three" />

    <Preference
        android:key="spacer"
        android:title="@string/single_space" />

</PreferenceScreen>